force-app/main/default/objects/Ledger__c/fields/Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee__c</fullName>
    <label>Admin Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>