force-app/main/default/objects/Ledger__c/fields/Amount_Due_for_Utilities__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_for_Utilities__c</fullName>
    <label>Amount Due for Utilities</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>