force-app/main/default/objects/Ledger__c/fields/Amount_Outstanding_on_Mortgage__c.field-meta.xml
<CustomField>
    <fullName>Amount_Outstanding_on_Mortgage__c</fullName>
    <label>Amount Outstanding on Mortgage</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>