force-app/main/default/objects/Ledger__c/fields/Bank_Address_Paying_Funeral_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Bank_Address_Paying_Funeral_Line_2__c</fullName>
    <label>Bank Address Paying Funeral Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>