force-app/main/default/objects/Ledger__c/fields/Before_After__c.field-meta.xml
<CustomField>
    <fullName>Before_After__c</fullName>
    <label>Before / After?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>