force-app/main/default/objects/Ledger__c/fields/Case_Officer__c.field-meta.xml
<CustomField>
    <fullName>Case_Officer__c</fullName>
    <label>Case Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>