force-app/main/default/objects/Ledger__c/fields/Client_CR__c.field-meta.xml
<CustomField>
    <fullName>Client_CR__c</fullName>
    <label>Client CR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>