force-app/main/default/objects/Ledger__c/fields/Client_DR__c.field-meta.xml
<CustomField>
    <fullName>Client_DR__c</fullName>
    <label>Client DR</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>