force-app/main/default/objects/Ledger__c/fields/Council_Tax_Paid__c.field-meta.xml
<CustomField>
    <fullName>Council_Tax_Paid__c</fullName>
    <label>Council Tax Paid</label>
    <type>Date</type>
</CustomField>