force-app/main/default/objects/Ledger__c/fields/Council_Tax_Value__c.field-meta.xml
<CustomField>
    <fullName>Council_Tax_Value__c</fullName>
    <label>Council Tax Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>