force-app/main/default/objects/Ledger__c/fields/Counil_Tax_Bill_Received__c.field-meta.xml
<CustomField>
    <fullName>Counil_Tax_Bill_Received__c</fullName>
    <label>Counil Tax Bill Received</label>
    <type>Date</type>
</CustomField>