force-app/main/default/objects/Ledger__c/fields/Creditor_Details__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Details__c</fullName>
    <label>Creditor Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>