force-app/main/default/objects/Ledger__c/fields/Creditor_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Email_Address__c</fullName>
    <label>Creditor Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>