force-app/main/default/objects/Ledger__c/fields/Creditor_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Fax_Number__c</fullName>
    <label>Creditor Fax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>