force-app/main/default/objects/Ledger__c/fields/Creditor_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Postcode__c</fullName>
    <label>Creditor Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>