force-app/main/default/objects/Ledger__c/fields/Days_Weeks_Months__c.field-meta.xml
<CustomField>
    <fullName>Days_Weeks_Months__c</fullName>
    <label>Days / Weeks / Months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>