force-app/main/default/objects/Ledger__c/fields/Details_of_Memorial__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Memorial__c</fullName>
    <label>Details of Memorial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>