force-app/main/default/objects/Ledger__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents</label>
    <type>Checkbox</type>
</CustomField>