force-app/main/default/objects/Ledger__c/fields/Due__c.field-meta.xml
<CustomField>
    <fullName>Due__c</fullName>
    <label>Due</label>
    <length>255</length>
    <type>Text</type>
</CustomField>