force-app/main/default/objects/Ledger__c/fields/Funeral_Paid__c.field-meta.xml
<CustomField>
    <fullName>Funeral_Paid__c</fullName>
    <label>Funeral Paid?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>