force-app/main/default/objects/Ledger__c/fields/Key_Date__c.field-meta.xml
<CustomField>
    <fullName>Key_Date__c</fullName>
    <label>Key Date</label>
    <type>Date</type>
</CustomField>