force-app/main/default/objects/Ledger__c/fields/Landlord_Agent_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_Address_Line_2__c</fullName>
    <label>Landlord/Agent Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>