force-app/main/default/objects/Ledger__c/fields/Landlord_Agent_Collecting_Rent__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_Collecting_Rent__c</fullName>
    <label>Landlord/Agent Collecting Rent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>