force-app/main/default/objects/Ledger__c/fields/Landlord_Agent_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_Email_Address__c</fullName>
    <label>Landlord/Agent Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>