force-app/main/default/objects/Ledger__c/fields/Landlord_Agent_Fax_Number__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_Fax_Number__c</fullName>
    <label>Landlord/Agent Fax Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>