force-app/main/default/objects/Ledger__c/fields/Landlord_Agent_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Agent_Postcode__c</fullName>
    <label>Landlord/Agent Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>