force-app/main/default/objects/Ledger__c/fields/Local_Authority_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority_Address_Line_1__c</fullName>
    <label>Local Authority Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>