force-app/main/default/objects/Ledger__c/fields/Local_Authority_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Local_Authority_Telephone__c</fullName>
    <label>Local Authority Telephone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>