force-app/main/default/objects/Ledger__c/fields/Mortgage_Reference__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Reference__c</fullName>
    <label>Mortgage Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>