force-app/main/default/objects/Ledger__c/fields/Nursing_Home_Address_Line_4__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Home_Address_Line_4__c</fullName>
    <label>Nursing Home Address Line 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>