force-app/main/default/objects/Ledger__c/fields/Nursing_Home_Fees_Paid__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Home_Fees_Paid__c</fullName>
    <label>Nursing Home Fees Paid</label>
    <type>Date</type>
</CustomField>