force-app/main/default/objects/Ledger__c/fields/Nursing_Home_Name__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Home_Name__c</fullName>
    <label>Nursing Home Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>