force-app/main/default/objects/Ledger__c/fields/Nursing_Home_Telephone_Numer__c.field-meta.xml
<CustomField>
    <fullName>Nursing_Home_Telephone_Numer__c</fullName>
    <label>Nursing Home Telephone Numer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>