force-app/main/default/objects/Ledger__c/fields/Office_Total__c.field-meta.xml
<CustomField>
    <fullName>Office_Total__c</fullName>
    <label>Office Total</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>