force-app/main/default/objects/Ledger__c/fields/Postcode_of_Bank_Paying_for_Funeral__c.field-meta.xml
<CustomField>
    <fullName>Postcode_of_Bank_Paying_for_Funeral__c</fullName>
    <label>Postcode of Bank Paying for Funeral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>