force-app/main/default/objects/Ledger__c/fields/Reference_for_Memorial__c.field-meta.xml
<CustomField>
    <fullName>Reference_for_Memorial__c</fullName>
    <label>Reference for Memorial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>