force-app/main/default/objects/Ledger__c/fields/Rent_Due_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Rent_Due_for_Payment__c</fullName>
    <label>Rent Due for Payment</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>