force-app/main/default/objects/Ledger__c/fields/Rental_Period_The_Rent_Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Rental_Period_The_Rent_Applies_To__c</fullName>
    <label>Rental Period The Rent Applies To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>