force-app/main/default/objects/Ledger__c/fields/Responsibles_Addrfor_Memorial_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Responsibles_Addrfor_Memorial_Line_2__c</fullName>
    <label>Responsibles Addr. for Memorial Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>