force-app/main/default/objects/Ledger__c/fields/Schedule_Code__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Code__c</fullName>
    <label>Schedule Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>