force-app/main/default/objects/Ledger__c/fields/Stonemason_Responsible_for_Memorial__c.field-meta.xml
<CustomField>
    <fullName>Stonemason_Responsible_for_Memorial__c</fullName>
    <label>Stonemason Responsible for Memorial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>