force-app/main/default/objects/Ledger__c/fields/Undertaker_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Undertaker_Address_Line_3__c</fullName>
    <label>Undertaker Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>