force-app/main/default/objects/Ledger__c/fields/Undertaker_Responsible_for_Funeral__c.field-meta.xml
<CustomField>
    <fullName>Undertaker_Responsible_for_Funeral__c</fullName>
    <label>Undertaker Responsible for Funeral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>