force-app/main/default/objects/Ledger__c/fields/Utility_Company_Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Utility_Company_Address_Line_3__c</fullName>
    <label>Utility Company Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>