force-app/main/default/objects/Ledger__c/fields/Utility_Company_Telephone_Number__c.field-meta.xml
<CustomField>
    <fullName>Utility_Company_Telephone_Number__c</fullName>
    <label>Utility Company Telephone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>